external-crates/move/crates/move-compiler/tests/move_check/naming/var_as_fun_invalid.exp
error[E04029]: invalid function call
  ┌─ tests/move_check/naming/var_as_fun_invalid.move:4:9
  │
4 │         var();
  │         ^^^ Unexpected invocation of parameter or local 'var'. Non-syntax variables cannot be invoked as functions
  │
  = Only macro syntax variables, e.g. '$var', may be invoked as functions.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/var_as_fun_invalid.move:4:9
  │
4 │         var();
  │         ^^^^^ lambda expressions are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

